[gd_scene load_steps=4 format=2]

[ext_resource path="res://3DToolbox/GoodSpinbox.gd" type="Script" id=1]
[ext_resource path="res://art/arrow_down_normal.png" type="Texture" id=2]
[ext_resource path="res://art/arrow_up_normal.png" type="Texture" id=3]

[node name="GoodSpinbox" type="HBoxContainer"]
margin_right = 82.0
margin_bottom = 40.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="."]
margin_right = 42.0
margin_bottom = 40.0
custom_constants/minimum_spaces = 8
max_length = 6
expand_to_text_length = true
context_menu_enabled = false
caret_blink = true
caret_blink_speed = 0.5

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 46.0
margin_right = 66.0
margin_bottom = 40.0

[node name="TextureButton" type="TextureButton" parent="VBoxContainer"]
margin_top = 1.0
margin_right = 20.0
margin_bottom = 17.0
rect_pivot_offset = Vector2( 10, 8 )
size_flags_vertical = 6
texture_normal = ExtResource( 3 )

[node name="TextureButton2" type="TextureButton" parent="VBoxContainer"]
margin_top = 23.0
margin_right = 20.0
margin_bottom = 39.0
rect_pivot_offset = Vector2( 10, 8 )
size_flags_vertical = 6
texture_normal = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.08

[node name="DelayTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
[connection signal="focus_exited" from="LineEdit" to="." method="_on_LineEdit_focus_exited"]
[connection signal="text_changed" from="LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="text_entered" from="LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="button_down" from="VBoxContainer/TextureButton" to="." method="_on_TextureButton_button_down"]
[connection signal="button_up" from="VBoxContainer/TextureButton" to="." method="_on_TextureButton_button_up"]
[connection signal="button_down" from="VBoxContainer/TextureButton2" to="." method="_on_TextureButton2_button_down"]
[connection signal="button_up" from="VBoxContainer/TextureButton2" to="." method="_on_TextureButton2_button_up"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="DelayTimer" to="." method="_on_DelayTimer_timeout"]
